[tool.poetry]
name = "importrosbag"
version = "0.1.0"
description = ""
authors = ["yuki-inaho <yoshikawa@inaho.co>"]

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.18.5"
tqdm = "^4.46.1"
ipython = "^7.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
